--- a/local/share/ranger/history
+++ b/local/share/ranger/history
@@ -1,8 +1,3 @@
-rename monday-4september2023_encapsulation.md
-rename tuesday-5september2023_encapsulation.md_
-rename tuesday-5september2023_encapsulation.md
-rename wednesday-6sept2023_.md_
-rename wednesday-6sept2023_.md
 rename thursday-7sept2023_.md
 rename Semester 6 -> 5 2023
 mkdir Syifa'-2023
@@ -34,17 +29,22 @@ search node
 search 
 search asd
 search admin
-search git
 rename ;aravel
 rename laravel
 rename Laravel
-delete
 open_with 
 rename Tool DevOps
-search vim
 shell 
 search github
 cd /media/
 mkdir ir
 mkdir  Membuat Aplikasi MVC dengan PHP 
 mkdir Belajar LARAVEL 8
+touch services.nix
+touch home.nix
+search nixpkgs
+search nvim
+search vim
+search git
+
+delete
