--- a/local/share/ranger/history
+++ b/local/share/ranger/history
@@ -1,15 +1,3 @@
-rename thursday-7sept2023_.md
-rename Semester 6 -> 5 2023
-mkdir Syifa'-2023
-rename Syifa-2023
-search kur
-search ghq
-rename config.inc.php_
-rename config.inc.php
-search npx
-search bootstrap
-touch config.inc.php
-rename index2.php
 mkdir View
 mkdir Controller
 mkdir Model
@@ -17,7 +5,6 @@ touch functions.php
 mkdir 
 touch conn.php
 touch html.php
-q
 search lte
 search vid
 search web
@@ -26,7 +13,6 @@ search icon
 touch class.php
 search khan
 search node
-search 
 search asd
 search admin
 rename ;aravel
@@ -43,8 +29,22 @@ mkdir Belajar LARAVEL 8
 touch services.nix
 touch home.nix
 search nixpkgs
-search nvim
 search vim
-search git
 
+touch
+touch tree.lua
+search lazy
+search kitty
+search mason
+search .con
+search 
+search nvim
+search book
+search safari
 delete
+rename SSIS-554.mp4
+search git
+search bat
+search fish
+q
+q!@
